// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GifExperApp should show <GifExperApp /> 1`] = `
<Fragment>
  <h2>
    Gif expert app
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`Test GifExperApp should show categories list 1`] = `
<Fragment>
  <h2>
    Gif expert app
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="day"
    key="day"
  />
  <GifGrid
    category="night"
    key="night"
  />
</Fragment>
`;
